<resources>
    <string name="app_name">MobileProject</string>
    <string name="news">News</string>
    <string name="daily">Daily Tasks: </string>
    <string name="progress">Your overall progress is </string>
    <string name="p6"> 60% </string>
    <string name="how">How was Your Day? </string>
    <string name="home">Home </string>
    <string name="prof">Profile </string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur  adipscing elit. Ut vel odio en urna ultrice... </string>
    <string name="lorem2">This is demonstrate siblings,hobbies,efforts, confidence, friends and short tr... </string>
    <string name="current">Current Transist: 3rd House </string>
    <string name="num1">1 </string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="task1">Daily astromeditation</string>
    <string name="task2">Daily sleep astromeditation</string>
    <string name="task3">Daily mantra</string>
    <string name="card">Short news title will be here</string>
</resources>