<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar" >

        <ImageView
            android:id="@+id/men"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_menu_24"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/sett"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_settings_24"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="12dp"
        android:padding="10dp">

        <!-- News-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:textColor="@color/text"
            android:textSize="23sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"/>

        <!-- Daily tasks -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily"
            android:textColor="@color/text"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_marginTop="18dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="11dp">

            <!-- first -->
            <LinearLayout
                android:layout_width="98dp"
                android:layout_height="90dp"
                android:orientation="vertical"
                android:padding="7dp"
                android:background="@drawable/first"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task1"
                    android:textSize="10sp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/num1"
                        android:textSize="24sp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_public_24"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"/>
                </LinearLayout>
            </LinearLayout>

            <!-- second -->
            <LinearLayout
                android:layout_width="98dp"
                android:layout_height="90dp"
                android:orientation="vertical"
                android:padding="7dp"
                android:background="@drawable/second"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task2"
                    android:textSize="10sp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/num2"
                        android:textSize="24sp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_public_24"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"/>
                </LinearLayout>
            </LinearLayout>

            <!-- third -->
            <LinearLayout
                android:layout_width="98dp"
                android:layout_height="90dp"
                android:orientation="vertical"
                android:background="@drawable/third"
                android:padding="7dp"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task3"
                    android:textSize="11sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/num3"
                        android:textSize="24sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/baseline_public_24" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <!-- Progress bar -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress"
                android:textColor="@color/text"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/p6"
                android:textColor="@color/progress"
                android:textSize="19sp"
                android:textStyle="bold" />
        </LinearLayout>
        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:outlineSpotShadowColor="@color/progress"
            android:progress="60"
            android:progressTint="@color/progress"/>


        <!-- how's your day -->
        <LinearLayout
            android:layout_width="315dp"
            android:layout_height="105dp"
            android:background="@drawable/transist"
            android:orientation="horizontal"
            android:padding="13dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/baseline_calendar_today_24" />

            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how"
                   android:layout_marginTop="7dp"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem"
                    android:textSize="10sp"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/baseline_navigate_next_24" />

        </LinearLayout>

        <!-- current time -->
        <LinearLayout
            android:layout_width="315dp"
            android:layout_height="105dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/time"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/baseline_access_time_24" />

            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current"
                    android:layout_marginTop="7dp"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem2"
                    android:textSize="10sp"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/baseline_navigate_next_24" />

        </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Your main content -->
        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="56dp"
            android:background="@color/white"/>

        <!-- Bottom Navigation View -->
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:menu="@menu/bottom_nav_menu" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>
</LinearLayout>